--- a/nextflow.config
+++ b/nextflow.config
@@ -31,4 +31,6 @@ time={30.min*task.attempt}
 withName:process_fqs_fastp{time='1.h'}
 withName:align_bwa{time='12.h'}
 withName:coor_sort_picard{time='10.h'}
+withName:homer_tag_dir{time='5.h'}
+withName:homer_motif{time='10.h'}
 }
